Remove overflow hidden which fixed non-js users

--- a/app/assets/stylesheets/modules/_scrolling-tables.scss
+++ b/app/assets/stylesheets/modules/_scrolling-tables.scss
@@ -15,10 +15,9 @@
     background: $white;
     box-sizing: border-box;
     margin: 0 0 $gutter 0;
-    overflow: hidden;
-    overflow-y: hidden;
     padding: 0 0 0 0;
     position: relative;
+    overflow-x: scroll;
     z-index: 10;
 
     .table {
